# SDLProject

./: CMakeLists.txt  SDLProject.sln  SDLProject.vcxproj  SDLProject.vcxproj.filters  hello.c  repomix-output.xml  vcpkg-configuration.json  vcpkg.json
Include/: asset_manager.h  game.h  input.h  renderer.h
Source/: asset_manager.c  game.c  input.c  main.c  renderer.c
include/: Application.h  ApplicationRenderIntegration.h  AudioClip.h  AudioMixer.h  AudioReverb.h  AudioSystem.h  Camera.h  ClusteredRenderSystem.h  Collider.h  Command.h  CommandManager.h  Component.h  CubeGrid.h  CubeRenderer.h  DebugRenderer.h  Decal.h  Editor - Copy.h  Editor.h  EditorTool.h  Entity.h  EntityManager.h  EventSystem.h  FileDialog.h  Frustum.h  GridCore.h  GridSerializer.h  ImGuiWrapper.h  InputManager.h  IsometricCamera.h  Light.h  LightManager.h  LineBatchRenderer.h  Material.h  OtherMemoryManager.h  PaletteManager.h  PhysicsSystem.h  PostProcessors.h  Profiler.h  Ray.h  RenderSettings.h  (+12 more)
include/Core/: Application.h  ConfigManager.h  Logger.h  MemoryManager.h  MemoryPool.h  Resource.h  ResourceManager.h  Subsystem.h  ThreadSafeQueue.h
include/Core/Serialize/: BinarySerializer.h  DataNode.h  JsonSerializer.h  Serializable.h  (+1 more)
include/ECS/: Component.h  ComponentPool.h  ComponentRegistry.h  ComponentTypes.h  Entity.h  EntityMetadata.h  Error.h  Registry.h  Scene.h  System.h  UUID.h  View.h  World.h
include/Rendering/: GeometryStage.h  IsometricRenderSystem.h  LightManager.h  Material.h  Mesh.h  PaletteManager.h  RenderContext.h  RenderPipeline.h  RenderStage.h  RenderSystem.h  RenderTarget.h  Shader.h  ShaderManager.h  Texture.h
include/Utility/: AABB.h  Color.h  DebugDraw.h  FileSystem.h  Frustum.h  Math.h  Octree.h  Profiler.h  Quadtree.h  Random.h  Ray.h  SpatialPartitionFactory.h  SpatialPartitioning.h  SpatialQuery.h  StringUtils.h  ThreadSafeQueue.h  Transform.h
include/Voxel/: BiomeManager.h  Chunk.h  ChunkCoord.h  ChunkManager.h  ChunkMesh.h  ChunkStorage.h  DistributionControl.h  FeaturePlacement.h  FileChunkStorage.h  GenerationParameters.h  Grid.h  NoiseGenerator.h  ProceduralGenerationSystem.h  StreamingManager.h  Voxel.h
include/components/: AudioListenerComponent.h  AudioSourceComponent.h  PhysicsComponent.h
include/editor/: SelectionTool.h  TransformTool.h  VoxelBrushTool.h
shaders/: BasicLightingFragmentShader.glsl  BloomBlurFrag.glsl  BloomCombineFrag.glsl  BloomThresholdFrag.glsl  BloomThresholdVert.glsl  ClusterBuildCompute.glsl  ClusterDebugFrag.glsl  ClusterDebugVert.glsl  ClusteredCommon.glsl  DebugFragmentShader.glsl  DecalAssignCompute.glsl  Frag.glsl  FragmentShader.glsl  InstancedFrag.glsl  InstancedFragmentShader.glsl  InstancedShadowVert.glsl  InstancedShadowVertexShader.glsl  InstancedVert.glsl  InstancedVertexShader.glsl  LightAssignCompute.glsl  LineVert.glsl  LineVertexShader.glsl  PixelArtFrag.glsl  PixelArtVert.glsl  SSAOBlurFrag.glsl  SSAOFrag.glsl  ShadowFrag.glsl  ShadowMappingFragmentShader.glsl  SkyboxVert.glsl  TonemapFrag.glsl  VertexShader.glsl
src/: Application.cpp  ApplicationRenderIntegration.cpp  AudioClip.cpp  AudioMixer.cpp  AudioReverb.cpp  AudioSystem.cpp  CharacterController.cpp  ClusteredRenderSystem.cpp  Collider.cpp  Command.cpp  CommandManager.cpp  Component.cpp  CubeGrid.cpp  CubeRenderer.cpp  DebugRenderer.cpp  Decal.cpp  Editor.cpp  EditorTool.cpp  Entity.cpp  EntityManager.cpp  EventSystem.cpp  GridCore.inl  ImGuiWrapper.cpp  InputManager.cpp  IsometricCamera.cpp  Light.cpp  LightManager.cpp  LineBatchRenderer.cpp  Main.cpp  Material.cpp  MemoryManager.inl  OtherMemoryManager.cpp  PaletteManager.cpp  PhysicsSystem.cpp  Ray.cpp  RenderSystem.cpp  SDLProject.cpp  Scene.cpp  SceneSerializer.cpp  Shader.cpp  (+5 more)
src/Core/: Application.cpp  ConfigManager.cpp  Logger.cpp  MemoryManager.cpp  MemoryPool.cpp  Resource.cpp  ResourceManager.cpp  Subsystem.cpp
src/ECS/: Component.cpp  ComponentRegistry.cpp  Entity.cpp  Entity.inl  EntityMetadata.cpp  Error.cpp  Registry.cpp  Scene.cpp  System.cpp  UUID.cpp  World.cpp
src/Rendering/: GeometryStage.cpp  IsometricRenderSystem.cpp  LightManager.cpp  Material.cpp  Material.inl  Mesh.cpp  PaletteManager.cpp  RenderContext.cpp  RenderPipeline.cpp  RenderStage.cpp  RenderStage.inl  RenderSystem.cpp  RenderTarget.cpp  Shader.cpp  ShaderManager.cpp  Texture.cpp
src/Utility/: AABB.cpp  Color.cpp  DebugDraw.cpp  FileSystem.cpp  Frustum.cpp  Frustum_SIMD.cpp  Math.cpp  Octree.cpp  Profiler.cpp  Quadtree.cpp  Random.cpp  Ray.cpp  SpatialPartitionFactory.cpp  SpatialPartitioning.cpp  SpatialQuery.cpp  StringUtils.cpp  Transform.cpp
src/Voxel/: BiomeManager.cpp  Chunk.cpp  ChunkManager.cpp  ChunkMesh.cpp  ChunkStorage.cpp  DistributionControl.cpp  FeaturePlacement.cpp  FileChunkStorage.cpp  GenerationParameters.cpp  Grid.cpp  NoiseGenerator.cpp  ProceduralGenerationSystem.cpp  StreamingManager.cpp
src/components/: AudioListenerComponent.cpp  AudioSourceComponent.cpp  PhysicsComponent.cpp
src/editor/: SelectionTool.cpp  TransformTool.cpp  VoxelBrushTool.cpp
(+69 files in other folders)
